@@ -16,6 +16,8 @@
  */
 package org.apache.solr.security;
 
+import static org.apache.solr.handler.admin.SecurityConfHandler.getMapValue;
+
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
@@ -28,29 +30,26 @@ import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.Set;
-
-import com.google.common.collect.ImmutableSet;
+import org.apache.solr.api.AnnotatedApi;
+import org.apache.solr.api.Api;
 import org.apache.solr.common.util.CommandOperation;
-import org.apache.solr.common.util.Utils;
 import org.apache.solr.common.util.ValidatingJsonMap;
-
+import org.apache.solr.handler.admin.api.ModifyBasicAuthConfigAPI;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static org.apache.solr.handler.admin.SecurityConfHandler.getMapValue;
+public class Sha256AuthenticationProvider
+    implements ConfigEditablePlugin, BasicAuthPlugin.AuthenticationProvider {
 
-public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  BasicAuthPlugin.AuthenticationProvider {
-
-  static String CANNOT_DELETE_LAST_USER_ERROR = "You cannot delete the last user. At least one user must be configured at all times.";
+  static String CANNOT_DELETE_LAST_USER_ERROR =
+      "You cannot delete the last user. At least one user must be configured at all times.";
   private Map<String, String> credentials;
   private String realm;
   private Map<String, String> promptHeader;
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-
-  @SuppressWarnings({"unchecked"})
-  static void putUser(String user, String pwd, @SuppressWarnings({"rawtypes"})Map credentials) {
+  static void putUser(String user, String pwd, Map<? super String, ? super String> credentials) {
     if (user == null || pwd == null) return;
     String val = getSaltedHashedValue(pwd);
     credentials.put(user, val);
@@ -72,13 +71,16 @@ public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  Basi
     } else {
       this.realm = "solr";
     }
-    
-    promptHeader = Collections.unmodifiableMap(Collections.singletonMap("WWW-Authenticate", "Basic realm=\"" + realm + "\""));
+
+    promptHeader =
+        Collections.unmodifiableMap(
+            Collections.singletonMap("WWW-Authenticate", "Basic realm=\"" + realm + "\""));
     credentials = new LinkedHashMap<>();
     @SuppressWarnings({"unchecked"})
-    Map<String,String> users = (Map<String,String>) pluginConfig.get("credentials");
+    Map<String, String> users = (Map<String, String>) pluginConfig.get("credentials");
     if (users == null || users.isEmpty()) {
-      throw new IllegalStateException("No users configured yet. At least one user must be configured in security.json");
+      throw new IllegalStateException(
+          "No users configured yet. At least one user must be configured in security.json");
     }
     for (Map.Entry<String, String> e : users.entrySet()) {
       String v = e.getValue();
@@ -88,9 +90,9 @@ public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  Basi
       }
       credentials.put(e.getKey(), v);
     }
-
   }
 
+  @Override
   public boolean authenticate(String username, String password) {
     String cred = credentials.get(username);
     if (cred == null || cred.isEmpty()) return false;
@@ -117,7 +119,7 @@ public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  Basi
       digest = MessageDigest.getInstance("SHA-256");
     } catch (NoSuchAlgorithmException e) {
       log.error("Cannot find algorithm ", e);
-      return null;//should not happen
+      return null; // should not happen
     }
     if (saltKey != null) {
       digest.reset();
@@ -131,7 +133,6 @@ public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  Basi
   }
 
   @Override
-  @SuppressWarnings({"unchecked"})
   public Map<String, Object> edit(Map<String, Object> latestConf, List<CommandOperation> commands) {
     for (CommandOperation cmd : commands) {
       if (!supported_ops.contains(cmd.name)) {
@@ -141,15 +142,14 @@ public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  Basi
       if (cmd.hasError()) return null;
       if ("delete-user".equals(cmd.name)) {
         List<String> names = cmd.getStrs("");
-        @SuppressWarnings({"rawtypes"})
-        Map map = (Map) latestConf.get("credentials");
+        Map<?, ?> map = (Map<?, ?>) latestConf.get("credentials");
         if (map == null || !map.keySet().containsAll(names)) {
-          cmd.addError("No such user(s) " +names );
+          cmd.addError("No such user(s) " + names);
           return null;
         }
         for (String name : names) {
           if (map.containsKey(name)) {
-            if (map.size() == 1){
+            if (map.size() == 1) {
               cmd.addError(CANNOT_DELETE_LAST_USER_ERROR);
               return null;
             }
@@ -158,21 +158,16 @@ public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  Basi
         }
         return latestConf;
       }
-      if ("set-user".equals(cmd.name) ) {
-        @SuppressWarnings({"rawtypes"})
-        Map map = getMapValue(latestConf, "credentials");
-        @SuppressWarnings({"rawtypes"})
-        Map kv = cmd.getDataMap();
-        for (Object o : kv.entrySet()) {
-          @SuppressWarnings({"rawtypes"})
-          Map.Entry e = (Map.Entry) o;
-          if(e.getKey() == null || e.getValue() == null){
+      if ("set-user".equals(cmd.name)) {
+        Map<String, Object> map = getMapValue(latestConf, "credentials");
+        Map<String, Object> kv = cmd.getDataMap();
+        for (Map.Entry<String, Object> e : kv.entrySet()) {
+          if (e.getKey() == null || e.getValue() == null) {
             cmd.addError("name and password must be non-null");
             return null;
           }
-          putUser(String.valueOf(e.getKey()), String.valueOf(e.getValue()), map);
+          putUser(e.getKey(), String.valueOf(e.getValue()), map);
         }
-
       }
     }
     return latestConf;
@@ -180,8 +175,10 @@ public class Sha256AuthenticationProvider implements ConfigEditablePlugin,  Basi
 
   @Override
   public ValidatingJsonMap getSpec() {
-    return Utils.getSpec("cluster.security.BasicAuth.Commands").getSpec();
+    final List<Api> apis = AnnotatedApi.getApis(new ModifyBasicAuthConfigAPI());
+    return apis.get(0).getSpec();
   }
 
-  static final Set<String> supported_ops = ImmutableSet.of("set-user", "delete-user");
+  // TODO make private?
+  static final Set<String> supported_ops = Set.of("set-user", "delete-user");
 }
